resizing bug on mobile devices

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -336,7 +336,7 @@ footer ul li {
 
 }
 
-@media only screen and (max-width:22.25em) {
+@media only screen and (max-width:23.75em) {
 	header img {
 		display: none;
 	}
